# nephila

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  docker-compose.yml  langgraph.json  pyproject.toml
.claude/: settings.json
.claude/agents/: ansm-researcher.md  chromadb-inspector.md  data-validator.md  eval-runner.md  pr-reviewer.md
.claude/hooks/: guard-destructive.sh  lint-python.sh
.claude/rules/: agent.md  code-style.md  commands.md  dbt.md  env-vars.md  git.md  pipeline.md  tests.md
.github/workflows/: ci.yml
dbt/: .sqlfluff  CLAUDE.md  dbt_project.yml  profiles.yml
dbt/macros/: clean_text.sql  is_valid_cis.sql  parse_bdpm_date.sql
dbt/models/: sources.yml
dbt/tests/: silver_ansm__interaction__niveau_contrainte_valid.sql  silver_ansm__interaction__niveau_contrainte_valid.yml  silver_ansm__interaction__substance_a_no_plus_prefix.sql  silver_ansm__interaction__substance_a_no_plus_prefix.yml  silver_ansm__interaction__substance_a_not_numeric.sql  silver_ansm__interaction__substance_a_not_numeric.yml
docs/: introduction.mdx  mint.json  quickstart.mdx
docs/agent/: guardrails.mdx  overview.mdx  tools.mdx
docs/dbt/: overview.mdx
docs/development/: conventions.mdx  setup.mdx
docs/pipeline/: bronze.mdx  gold.mdx  overview.mdx  silver.mdx
scripts/: run_eval.py
tests/: conftest.py
tests/agent/: test_critical_levels.py  test_node_guardrail.py  test_node_response.py  test_node_warn.py  test_queries.py  test_routing.py  test_tool_check_interactions.py  test_tool_find_generics.py  test_tool_get_rcp.py
tests/e2e/: prompts.yaml
(+70 files in other folders)
